// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Protected component should not render children if user is logged in and does not have the role 1`] = `
<div>
  <div
    class="NotAuthorized__Container-sc-1p31de1-0 hzUomm"
    data-testid="notAuthorized"
  >
    <h1>
      error:notAuthorized
    </h1>
  </div>
</div>
`;

exports[`Protected component should redirect to another page when user is not logged in and component have a redirect prop 1`] = `
<div>
  <div
    class="NotAuthorized__Container-sc-1p31de1-0 hzUomm"
    data-testid="notAuthorized"
  >
    <h1>
      error:notAuthorized
    </h1>
  </div>
</div>
`;

exports[`Protected component should render children if user is logged in and has the role 1`] = `
<div>
  <h1>
    children
  </h1>
</div>
`;

exports[`Protected component should render children if user is logged in and the component does not require a role 1`] = `
<div>
  <h1>
    children
  </h1>
</div>
`;

exports[`Protected component should return the login modal if user is not logged in 1`] = `
<div>
  <div
    class="styles__ModalOverlay-sc-1qmoktn-0 dMSdWD"
  >
    <div
      class="styles__Modal-sc-1qmoktn-1 fqJoic"
    >
      <button
        class="styles__ModalCloseIcon-sc-1qmoktn-2 XvXYH"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </button>
      <div
        class="styles__StyledLoginModal-sc-1ou1hne-0 bFnYXo"
      >
        <div
          class="styles__RegisterContainer-sc-1ou1hne-2 ezoGis"
        >
          <div
            class="styles__StyledLabel-sc-1ou1hne-1 drgsBn"
          >
            common:areYouNewHere?
          </div>
          <button
            class="styles__StyledButton-sc-9okshb-0 cdsgya"
            color="hsla(0, 0%, 100%)"
            title=""
            type="button"
          >
            common:registerYourUser
          </button>
        </div>
        <form
          class="Form__StyledForm-zf05us-0 bhlRPh"
        >
          <div
            class="styles__StyledLabel-sc-1ou1hne-1 drgsBn"
          >
            common:alreadyRegistered?
          </div>
          <div
            class="styles__InputFieldWrapper-r3rrke-0 coSKbD"
          >
            <label
              class="styles__InputLabel-r3rrke-1 bYjYOY"
              for="email"
            />
            <div
              class="styles__Row-r3rrke-3 hrcPDx"
            >
              <input
                aria-label=""
                aria-required="true"
                class="InputField__StyledInput-sc-1x24211-0 KNcEE"
                id="email"
                name="email"
                placeholder="E-mail"
                type="email"
              />
            </div>
            <span
              class="styles__InputError-r3rrke-2 cKUnfp"
            />
          </div>
          <div
            class="styles__InputFieldWrapper-r3rrke-0 coSKbD"
          >
            <label
              class="styles__InputLabel-r3rrke-1 bYjYOY"
              for="password"
            />
            <div
              class="styles__Row-r3rrke-3 hrcPDx"
            >
              <input
                aria-label=""
                aria-required="true"
                class="InputField__StyledInput-sc-1x24211-0 KNcEE"
                id="password"
                name="password"
                placeholder="Senha"
                type="password"
              />
            </div>
            <span
              class="styles__InputError-r3rrke-2 cKUnfp"
            />
          </div>
          <div
            class="CheckBoxField__StyledCheckBox-vw1j4b-0 dCxhCs"
          >
            <input
              aria-label="common:rememberpassword"
              aria-required="false"
              class="CheckBoxField__StyledCheckBoxInput-vw1j4b-1 isQqST"
              id="remember"
              name="remember"
              type="checkbox"
            />
            <div
              class="CheckBoxField__StyledCheckBoxLabel-vw1j4b-2 VsGyd"
            >
              common:rememberpassword
            </div>
          </div>
          <p>
            common:signInToContinue
          </p>
          <div
            class="Form__Actions-zf05us-1 ibZajW"
          >
            <button
              class="styles__StyledButton-sc-9okshb-0 cdsgya"
              color="hsla(0, 0%, 100%)"
              title=""
              type="submit"
            >
              common:login
            </button>
            <a
              class="styles__StyledLink-sc-1ou1hne-3 AvDVp"
            >
              common:forgotPassword
            </a>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    class="NotAuthorized__Container-sc-1p31de1-0 hzUomm"
    data-testid="notAuthorized"
  >
    <h1>
      error:notAuthorized
    </h1>
  </div>
</div>
`;
